Re-implemented the Rich text Editor using components

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React Slack Redesign Clone</title>
     <link rel="stylesheet" href="css/all.css" />
   </head>
-  <body onload="initDoc();">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
